# simple_model

./: README.md  algorithms.py  conftest.py  doomed_config.yaml  example_config.yaml  example_train.py  pyproject.toml  test_algorithms.py  train.py
